--- a/6dejaar/arbeidenergie/ae_pot_elastische.tex
+++ b/6dejaar/arbeidenergie/ae_pot_elastische.tex
@@ -6,8 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Elastsiche potentiële energie}{}
-    \xmsource\xmuitleg
-
+    %\xmsource\xmuitleg
 
 
 	%%%\section{Potentiële energie}
