--- a/test.tex
+++ b/test.tex
@@ -33,7 +33,7 @@
 \part{Basisbegrippen van de kinematica}
 
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
-\activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_positie.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_snelheid.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_versnelling.tex}
@@ -51,13 +51,13 @@
 
 
 
-\part{Tweedimensionale bewegingen}
+% \part{Tweedimensionale bewegingen}
 
-\activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
-\activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} \todo{Moet hier weg. Eigenschap snelheid raakt aan de baan > basisbegrippen. Ook voorbeeld naar basisbegrippen}
-\activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
-\activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+% % \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} \todo{Moet hier weg. Eigenschap snelheid raakt aan de baan > basisbegrippen. Ook voorbeeld naar basisbegrippen}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
 % \part{De beginselen van Newton}
