--- a/test.tex
+++ b/test.tex
@@ -33,7 +33,7 @@
 \part{Basisbegrippen van de kinematica}
 
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_positie.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_snelheid.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_versnelling.tex}
