--- a/test.tex
+++ b/test.tex
@@ -33,7 +33,7 @@
 \part{Basisbegrippen van de kinematica}
 
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_positie.tex}
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_snelheid.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_versnelling.tex}
@@ -62,9 +62,9 @@
 
 % \part{De beginselen van Newton}
 
-% \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
+\activitychapter{6dejaar/dynamica/nwtn_intro.tex}
+\activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
+\activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_oef.tex} = te verwijderen ...
 % \activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
