--- a/preamble.tex
+++ b/preamble.tex
@@ -1260,17 +1260,35 @@
 
 \providecommand{\xmuitleg}{
 \ifonlineTF{
-\begin{expandable}{remark}{Deze open-source cursus is in ontwikkeling.}
-Leerkrachten en leerlingen die van dit materiaal gebruik maken kunnen eenvoudig fouten/verbetering/... melden:
+\begin{expandable}{remark}{Verbeteringen/fouten/onduidelijkheden/...?}
+
+Deze open-source cursus is in ontwikkeling.
+\textbf{De aanbevelingen van leerlingen om dit materiaal te verbeteren zijn erg welkom via info@wiskunde.opmaat.org} \\ 
+Dit kan gaan over: 
 \begin{itemize}
-    \item  via de 'Wijzig' knop kan je zelf kleine fouten en typo's aanpassen. \href{https://wiskunde.opmaat.org/website/inhoud/welkom/doe-mee}{(extra uitleg)}
-    \item een mail sturen naar info@wiksunde.opmaat.org 
+    \item Een voorbeeld dat onduidelijk is.
+    \item Onnauwkeurigheden, schrijffouten, ... 
+    \item Een tussenstap die beter uitgelegd moet worden. 
+    \item Een uitleg die je op youtube, wikipedia of aan de kersttafel gevonden hebt die ophelderend was. 
+    \item ... 
 \end{itemize}
-Dit materiaal wordt ontwikkeld als open-source project via \href{https://natuurkundeopmaat.zulipchat.com/login/}{zulip}. 
 \end{expandable}
 }
 {}   % Niets in de in PDF ...
 }
+% \providecommand{\xmuitleg}{
+% \ifonlineTF{
+% \begin{expandable}{remark}{Deze open-source cursus is in ontwikkeling.}
+% Leerkrachten en leerlingen die van dit materiaal gebruik maken kunnen eenvoudig fouten/verbetering/... melden:
+% \begin{itemize}
+%     \item  via de 'Wijzig' knop kan je zelf kleine fouten en typo's aanpassen. \href{https://wiskunde.opmaat.org/website/inhoud/welkom/doe-mee}{(extra uitleg)}
+%     \item een mail sturen naar info@wiksunde.opmaat.org 
+% \end{itemize}
+% Dit materiaal wordt ontwikkeld als open-source project via \href{https://natuurkundeopmaat.zulipchat.com/login/}{zulip}. 
+% \end{expandable}
+% }
+% {}   % Niets in de in PDF ...
+% }
 
 
 
