--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -3,28 +3,37 @@
 
 \addPrintStyle{../..}
 
-% \ifdefined\HCode
-%   \renewcommand{\includegraphics}[2][]{%
-%     \HCode{<img src="#2" alt=""/>}%
-%   }
-% \fi
-
 
 \begin{document}
 	\author{Bart Lambregs, Vincent Gellens}
 	\xmtitle{De positie}{}
     \xmsource\xmuitleg
 
+\NewDocumentCommand{\maakachtvar}{m m m m m m m m}{
+
+	\pgfmathsetmacro{\at}{#1}    \pgfmathsetmacro{\ax}{#2}
+	\pgfmathsetmacro{\bt}{#3}    \pgfmathsetmacro{\bx}{#4}
+	\pgfmathsetmacro{\ct}{#5}    \pgfmathsetmacro{\cx}{#6}
+	\pgfmathsetmacro{\dt}{#7}    \pgfmathsetmacro{\dx}{#8}
+
+	\pgfmathsetmacro{\tmin}{min(\at,\bt,\ct,\dt)}
+	\pgfmathsetmacro{\tmax}{max(\at,\bt,\ct,\dt)}
+	\pgfmathsetmacro{\xmin}{min(\ax,\bx,\cx,\dx)}
+	\pgfmathsetmacro{\xmax}{max(\ax,\bx,\cx,\dx)}
+
+	\pgfmathsetmacro{\deltat}{\tmax-\tmin}
+	\pgfmathsetmacro{\deltax}{\xmax-\xmin}
+
+	\pgfmathsetmacro{\xmargin}{0.08*\deltat}   
+	\pgfmathsetmacro{\ymargin}{0.3*\deltax} 
+
+	\pgfmathsetmacro{\xrangemin}{\tmin-\xmargin}
+	\pgfmathsetmacro{\xrangemax}{\tmax+\xmargin}
+	\pgfmathsetmacro{\yrangemin}{\xmin-\ymargin}
+	\pgfmathsetmacro{\yrangemax}{\xmax+\ymargin}
+}
 
 
-
-% EERST: ALS JE IETS EEN PLAATS GEEFT IS DAT EEN PLAATSVECTOR 
-% ALS IETS BEWEEGT BEWEEGT DEZE VECTOR 
-% JE WILT EEN FUNCTIE DIE VOOR ELKE TIJD DE VECTOR GEEFT --> PLAATSFUNCTIE 
-
-
-% DEZE FIX WERKT NIET --> PRINT GEEN VECTORPIJLTJES MEER!! 
-% \renewcommand{\vec}[1]{#1}
 
 \subsection*{Positie en plaatsfunctie}
 
@@ -34,9 +43,16 @@ De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\
 
 
 
+\begin{definition}
+	De \textbf{positie} van een puntmassa \(A\) wordt vectorieel beschreven met de \textbf{plaatsvector \(\vec{r}\)}. % of scalair met behulp van de coördinaten \(x\) en \(y\). 
+	Een plaatsvector \(\vec{r}\) kan ontbonden in de componenten volgens de assen.
+	Op die manier krijgt de puntmassa \(A\) coördinaten \(co(A) = (x,y)\).  
+	\[
+	\vec{r} = \vec{r}_x + \vec{r}_y = x\cdot\vec{e}_x + y\cdot\vec{e}_y
+	\]
+
 \begin{image}[0.3\textwidth]
 	\begin{tikzpicture}
-	
 		\draw[->] (-0.5,0) -- (3,0) node[right] {$x$};
 		\draw[->] (0,-0.5) -- (0,3) node[above] {$y$};
 		\coordinate (O) at (0,0);
@@ -45,7 +61,6 @@ De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\
 		\pgfmathsetmacro{\ang}{60} 
 
 		\coordinate (A) at (\ang :\r);
-
 		\coordinate (X) at (\r*cos{\ang},0);
 		\coordinate (Y) at (0,\r*sin{\ang});
 	
@@ -61,7 +76,8 @@ De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\
 	\end{tikzpicture}
 \end{image}
 \captionof{figure}{De plaatsvector \(\vec{r}\)}
-	
+\end{definition}
+
 
 Als een puntmassa beweegt, verandert haar plaatsvector \(\vec{r}\).  
 De beweging van een puntmassa wordt beschreven door een \textit{functie} die de \textbf{plaats} \(\vec{r}\) weergeeft in functie van de \textbf{tijd}. 
@@ -83,7 +99,7 @@ En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden v
 
 
 De positie op een welbepaald tijdstip $t_1$ wordt genoteerd als 
-%\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
+\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
 \begin{eqnarray*}
 x_1=x(t_1)
 \end{eqnarray*}
@@ -92,122 +108,84 @@ In onderstaande figuur zie je de tocht dat een zeilship aflegde.
 Op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ wordt weergegeven waar het ship zich bevindt. 
 
 
-% DIT KOMT UIT HET HANDBOEK --> VERVANGEN DOOR TIKZ VAN HET ZEILSCHIP 
-% \begin{image}
-% \includegraphics[width=0.45\textwidth]{Serway2p1(1)}
-% $\qquad$   % hack 
-% \includegraphics[width=0.45\textwidth]{Serway2p1(2)}
-% \end{image}
-% \captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
+\maakachtvar{0}{30}{5}{40}{15}{10}{35}{-10}
 
-
-\pgfmathsetmacro{\at}{0  }
-\pgfmathsetmacro{\ax}{30 }
-\pgfmathsetmacro{\bt}{5  }
-\pgfmathsetmacro{\bx}{45 }
-\pgfmathsetmacro{\ct}{10 }
-\pgfmathsetmacro{\cx}{20 }
-\pgfmathsetmacro{\dt}{30 }
-\pgfmathsetmacro{\dx}{0  }
-\pgfmathsetmacro{\et}{45 }
-\pgfmathsetmacro{\ex}{-40}
-
-
-% DE ZEILBOOT OP 1 LIJN ------------ % DE ZEILBOOT OP 1 LIJN ------ % DE ZEILBOOT OP 1 LIJN 
-% DE ZEILBOOT OP 1 LIJN ------------ % DE ZEILBOOT OP 1 LIJN ------ % DE ZEILBOOT OP 1 LIJN
-% DE ZEILBOOT OP 1 LIJN ------------ % DE ZEILBOOT OP 1 LIJN ------ % DE ZEILBOOT OP 1 LIJN
 \begin{image}[0.8\textwidth]
-\begin{tikzpicture}
-\begin{axis}[
-	axis x line=bottom,
-	axis y line=none,       % no vertical axis
-	axis line style={->},
-	xmin=-50, xmax=55,    % position axis
-	ymin=-1, ymax=3,        % enough room for icons + labels
-	width=14cm, height=4cm,
-	xlabel={Positie--as (in meter)},
-	xtick={-50,-40,...,50},
-	xticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}}, % gaf eerst in beduidende cijfers 
-	% yticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}},
-]
+  \begin{tikzpicture}
+  \begin{axis}[
+	  axis x line=bottom,
+	  axis y line=none,   
+	  axis line style={->},
+	  xmin= \yrangemin, xmax=\yrangemax,
+	  ymin=-1, ymax=3,  %plek voor schepen en tijdlabels 
+	  xlabel={Positie--as (in meter)},
+	  xtick distance=5,
+	  xticklabel={\tiny\SI[round-precision=0, round-mode=places]{\tick}{m}},
+	  width=14cm, height=4cm,
+  ]
 
-% --- Ships at given positions ---
-\node[opacity=0.2,scale=1,xscale=-1]  (ship1) at (axis cs:\ax,0.5)  {\includegraphics[width=1cm]{schip_icoon}};
-\node[opacity=0.5,scale=1,xscale=0.7] (ship2) at (axis cs:\bx,0.5)  {\includegraphics[width=1cm]{schip_icoon}};
-\node[opacity=0.7]                     (ship3) at (axis cs:\cx,0.5) {\includegraphics[width=1cm]{schip_icoon}};
-\node[]                                (ship4) at (axis cs:\dx,0.5) {\includegraphics[width=1cm]{schip_icoon}};
-\node[]                                (ship5) at (axis cs:\ex,0.5) {\includegraphics[width=1cm]{schip_icoon}};
+  \node[opacity=0.3,scale=1,xscale=-1]  (ship1) at (axis cs:\ax,0.5)  {\includegraphics[width=1cm]{schip_icoon}};
+  \node[draw, rectangle, inner sep=1pt] (t1) at (axis cs:\ax,2.2) {\small $t_0=\SI{\at}{\second}$};
 
-% --- Time labels above ships ---
-\node[draw, rectangle, inner sep=1pt] (t1) at (axis cs:\ax,2.2) {\small $t_0=\SI{\at}{\second}$};
-\node[draw, rectangle, inner sep=1pt] (t2) at (axis cs:\bx,2.2) {\small $t_1=\SI{\bt}{\second}$};
-\node[draw, rectangle, inner sep=1pt] (t3) at (axis cs:\cx,2.2) {\small $t_2=\SI{\ct}{\second}$};
-\node[draw, rectangle, inner sep=1pt] (t4) at (axis cs:\dx,2.2) {\small $t_3=\SI{\dt}{\second}$};
-\node[draw, rectangle, inner sep=1pt] (t5) at (axis cs:\ex,2.2) {\small $t_4=\SI{\et}{\second}$};
+  \node[opacity=0.6,scale=1,xscale=0.7] (ship2) at (axis cs:\bx,0.5)  {\includegraphics[width=1cm]{schip_icoon}};
+  \node[draw, rectangle, inner sep=1pt] (t2) at (axis cs:\bx,2.2) {\small $t_1=\SI{\bt}{\second}$};
 
-\end{axis}
-\end{tikzpicture}
+  \node[opacity=0.9]                     (ship3) at (axis cs:\cx,0.5) {\includegraphics[width=1cm]{schip_icoon}};
+  \node[draw, rectangle, inner sep=1pt] (t3) at (axis cs:\cx,2.2) {\small $t_2=\SI{\ct}{\second}$};
+
+  \node[]                                (ship4) at (axis cs:\dx,0.5) {\includegraphics[width=1cm]{schip_icoon}};
+  \node[draw, rectangle, inner sep=1pt] (t4) at (axis cs:\dx,2.2) {\small $t_3=\SI{\dt}{\second}$};
+  
+  \end{axis}
+  \end{tikzpicture}
 \end{image}
 \captionof{figure}{De positie van de zeilboot voor elke tijd \(t\)}
 
 
 In de natuurkunde is \textbf{tijd een dimensie}.\footnote{Einstaan gaf een beschrijving voor de zwaartekracht in de \textit{4-dimensionale ruimte-tijd}.}
 In bovenstaande figuur wordt boven elke zeilboot aangegeven op welk tijdstip de boot daar werd waargenomen. 
-Zo bevindt de boot zich op \(t_3 = \SI{\ct}{\second}\) op de positie \(\SI{\cx}{\meter}\). 
-De startpositie van de zeilboot \(x_0\) is gelijk aan \(\SI{\ax}{\meter}\) want voor \(t_0 = \SI{\at}{\second}\) geldt \(x(\at) = \SI{\ax}{\meter}\).
+Zo bevindt de boot zich op \(t_1 = \SI{5}{\second}\) op de positie \(\SI{40}{\meter}\). 
+De startpositie van de zeilboot \(x_0\) is gelijk aan \(\SI{30}{\meter}\) want voor \(t_0 = \SI{0}{\second}\) geldt \(x(0) = \SI{30}{\meter}\).
 In plaats van de tijd boven elke zeilboot te noteren, is het ook mogelijk om de tocht op een tijd-as uit te zetten. 
 
 
-
-% ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS 
-% ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS 
-% ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS 
-
 \begin{image}[0.5\textwidth]
-\begin{tikzpicture}
-	\begin{axis}[
-		axis x line=bottom,
-		axis y line=left,
-		axis line style={->},
-		xlabel={tijd (in seconden)},
-		ylabel={positie (in meter)},
-		xmin=0, xmax=50,
-		ymin=-50, ymax=65,
-		xtick={0,10,...,50},
-		ytick={-50,-40,...,50}, % keep normal marks
-		xticklabel={\SI[round-precision=0, round-mode=places]{\tick}{s}},
-		yticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}},
-		grid=both,
-		width=15cm, height=10cm,
-	]
+	\begin{tikzpicture}
+		\begin{axis}[
+			axis x line=bottom,
+			axis y line=left,
+			axis line style={->},
+			xlabel={tijd (in seconden)},
+			ylabel={positie (in meter)},
+			xmin= \xrangemin, xmax=\xrangemax,
+			ymin= \yrangemin, ymax=\yrangemax,
+			xtick distance=5,
+			ytick distance=10,
+			xticklabel={\SI[round-precision=0, round-mode=places]{\tick}{s}},
+			yticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}},
+			grid=both,
+			width=15cm, height=10cm,
+		]
+		
+		\node[] at (axis cs:\at,\ax) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\at,\ax+10) {\small $t_0=\SI{\at}{\second}$};
 	
-	% --- The position–time curve ---
-	% \addplot[blue, thick] coordinates{
-	% 	(\at,\ax)
-	% 	(\bt,\bx)
-	% 	(\ct,\cx)
-	% 	(\dt,\dx)
-	% 	(\et,\ex)
-	% };
+		\node[] at (axis cs:\bt,\bx) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\bt,\bx+10) {\small $t_1=\SI{\bt}{\second}$};
 	
-	% --- Ships as markers at data points ---
-	\node[] at (axis cs:\at,\ax) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\bt,\bx) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\ct,\cx) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\dt,\dx) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\et,\ex) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[] at (axis cs:\ct,\cx) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\ct,\cx+10) {\small $t_2=\SI{\ct}{\second}$};
 	
-	% --- Time labels above each ship ---
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\at,\ax+10) {\small $t_1=\SI{\at}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\bt,\bx+10) {\small $t_2=\SI{\bt}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\ct,\cx+10) {\small $t_3=\SI{\ct}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\dt,\dx+10) {\small $t_4=\SI{\dt}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\et,\ex+10) {\small $t_5=\SI{\et}{\second}$};
+		\node[] at (axis cs:\dt,\dx) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\dt,\dx+10) {\small $t_3=\SI{\dt}{\second}$};
 	
-	\end{axis}
-	\end{tikzpicture}
-\end{image}
-\captionof{figure}{De positie van de zeilboot met een tijd-as}
+		\end{axis}
+		\end{tikzpicture}
+	\end{image}
+	\captionof{figure}{De positie van de zeilboot met een tijd-as}
+	
+	
+	
 
 
 Er zit \textbf{geen} extra informatie in bovenstaande figuur! 
@@ -221,58 +199,82 @@ Dan verandert de positie volgens de positie-as natuurlijk niet, maar het blad be
 De positie van de zeilboot is enkel weergegeven voor een aantal specifieke momenten \(t_0, t_1, t_2, t_3 \text{ en } t_4\). 
 De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldots
 
-% bovenstaande figuur kan voor elke moment \(t\) de positie worden weergegeven, op die manier bekom je de \textbf{plaatsfunctie}. 
-% @bart; moet nog aangepast worden naar hoe een groot onderscheid je maakt tussen funcite en grafiek
 
-\begin{image}[0.5\textwidth]
-\begin{tikzpicture}
-	\begin{axis}[
-		axis x line=bottom,
-		axis y line=left,
-		axis line style={->},
-		xlabel={tijd (in seconden)},
-		ylabel={positie (in meter)},
-		xmin=0, xmax=50,
-		ymin=-50, ymax=65,
-		xtick={0,10,...,50},
-		ytick={-50,-40,...,50}, % keep normal marks
-		xticklabel={\SI[round-precision=0, round-mode=places]{\tick}{s}},
-		yticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}},
-		grid=both,
-		width=15cm, height=10cm,
-	]
+\begin{image}[0.8\textwidth]
+	\begin{tikzpicture}
+		\begin{axis}[
+			axis x line=bottom,
+			axis y line=left,
+			axis line style={->},
+			xlabel={tijd (in seconden)},
+			ylabel={positie (in meter)},
+			xmin= \xrangemin, xmax=\xrangemax,
+			ymin= \yrangemin, ymax=\yrangemax,
+			xtick distance=5,
+			ytick distance=10,
+			xticklabel={\SI[round-precision=0, round-mode=places]{\tick}{s}},
+			yticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}},
+			grid=both,
+			width=15cm, height=10cm,
+		]
+		
+		\addplot[blue, thick, smooth, tension=0.5] coordinates{
+			(\at,\ax)
+			(\bt,\bx)
+			(\ct,\cx)
+			(\dt,\dx)
+		};
+		
+		\node[] at (axis cs:\at,\ax) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\at,\ax+10) {\small $t_0=\SI{\at}{\second}$};
 	
-	% --- The position–time curve ---
-	\addplot[blue, thick, smooth, tension=0.5] coordinates{
-		(\at,\ax)
-		(\bt,\bx)
-		(\ct,\cx)
-		(\dt,\dx)
-		(\et,\ex)
-	};
+		\node[] at (axis cs:\bt,\bx) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\bt,\bx+10) {\small $t_1=\SI{\bt}{\second}$};
 	
-	% --- Ships as markers at data points ---
-	\node[] at (axis cs:\at,\ax) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\bt,\bx) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\ct,\cx) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\dt,\dx) {\includegraphics[width=1cm]{schip_icoon}};
-	\node[] at (axis cs:\et,\ex) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[] at (axis cs:\ct,\cx) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\ct,\cx+10) {\small $t_2=\SI{\ct}{\second}$};
 	
-	% --- Time labels above each ship ---
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\at,\ax+10) {\small $t_1=\SI{\at}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\bt,\bx+10) {\small $t_2=\SI{\bt}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\ct,\cx+10) {\small $t_3=\SI{\ct}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\dt,\dx+10) {\small $t_4=\SI{\dt}{\second}$};
-	\node[draw, rectangle, inner sep=1pt] at (axis cs:\et,\ex+10) {\small $t_5=\SI{\et}{\second}$};
+		\node[] at (axis cs:\dt,\dx) {\includegraphics[width=1cm]{schip_icoon}};
+		\node[draw, rectangle, inner sep=1pt] at (axis cs:\dt,\dx+10) {\small $t_3=\SI{\dt}{\second}$};
+		\end{axis}
+	\end{tikzpicture}
 	
-	\end{axis}
-\end{tikzpicture}
-\end{image}	
-
+	\begin{tikzpicture}
+			\begin{axis}[
+				axis x line=bottom,
+				axis y line=left,
+				axis line style={->},
+				xlabel={tijd (in seconden)},
+				ylabel={positie (in meter)},
+				xmin= \xrangemin, xmax=\xrangemax,
+				ymin= \yrangemin, ymax=\yrangemax,
+				xtick distance=5,
+				ytick distance=10,
+				xticklabel={\SI[round-precision=0, round-mode=places]{\tick}{s}},
+				yticklabel={\SI[round-precision=0, round-mode=places]{\tick}{m}},
+				grid=both,
+				width=15cm, height=10cm,
+			]
+			
+			\addplot[blue, thick, smooth, tension=0.5] coordinates{
+				(\at,\ax)
+				(\bt,\bx)
+				(\ct,\cx)
+				(\dt,\dx)
+			};
+			
+			\end{axis}
+			\end{tikzpicture}
+	\end{image}
+	\captionof{figure}{De plaatsfunctie van de zeilboot voor elke \(t \in [0, 35]\)}
 
 \begin{definition} 
-	De \textbf{plaatsfunctie} \(\vec{x}(t)\) geeft voor elke moment \(t\) de positievector \(x\). 
+	De \textbf{plaatsfunctie} \(\vec{x}(t)\) geeft voor elke moment \(t\) de positievector \(\vec{x}\). \\
 	In één dimensie is \(\vec{x}\) een scalar en is de plaatsfuncie een grafiek waarop horizontaal de tijd wordt weergegeven en verticaal de positie. 
+	De positie op een welbepaald tijdstip \(t_a\) wordt genoteerd als 
+	\[
+	x_a = x(t_a)
+	\]
 
 \begin{image}[0.3\textwidth]
 	\begin{tikzpicture}
@@ -286,35 +288,33 @@ De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldot
 			ytick=\empty,
 			clip=false,
 		]
-			Coordinates
-			\addplot[
-				only marks,
-				mark=*,
-				mark size=2pt,
-				color=red
-			] coordinates {
-				(1,3) (3,2)
-			};
+		\addplot[
+			only marks,
+			mark=*,
+			mark size=2pt,
+			color=red
+		] coordinates {
+			(3,2) (5,5)
+		};
 	
-			% Interpolating function through the points
-			\addplot[
-				smooth,
-				thick,
-				color=blue
-			] coordinates {
-				(0,1) (1,3) (3,2) (4,3) (6,4)
-			};
+		\addplot[
+			smooth,
+			thick,
+			color=blue
+		] coordinates {
+			(0,1) (1,3) (3,2) (5,5) (6,5.5)
+		};
 
-		% Project points (example: first and last points)
-		\draw[dashed] (axis cs:1,3) -- (axis cs:1,0) node[below]{$t_a$};
-		\draw[dashed] (axis cs:1,3) -- (axis cs:0,3) node[left]{$x_a$};
-		\draw[dashed] (axis cs:3,2) -- (axis cs:3,0) node[below]{$t_b$};
-		\draw[dashed] (axis cs:3,2) -- (axis cs:0,2) node[left]{$x_b$};
+		\draw[dashed] (axis cs:3,2) -- (axis cs:3,0) node[below]{$t_a$};
+		\draw[dashed] (axis cs:3,2) -- (axis cs:0,2) node[left]{$x_a$};
+		\draw[dashed] (axis cs:5,5) -- (axis cs:5,0) node[below]{$t_b$};
+		\draw[dashed] (axis cs:5,5) -- (axis cs:0,5) node[left]{$x_b$};
 
 		\end{axis}
 	\end{tikzpicture}
-
 \end{image}
+\captionof{figure}{De grafiek van een plaatsfunctie \(x(t)\)}
+
 \end{definition}
 
 
@@ -324,102 +324,128 @@ De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is het verschil in positie tussen
 \begin{definition}
 De \textbf{verplaatsing} \(\Delta \vec{r}\) is het verschil tussen twee posities:
 \[
-\Delta \vec{r} = \vec{r}_2 - \vec{r}_1
+\Delta \vec{r}_{21} = \vec{r}_2 - \vec{r}_1
 \]
 
 \tikzset{>={latex[scale=1.2]}}
-
 \begin{image}[0.3\textwidth]
 	\begin{tikzpicture}
 		
 		\draw[->] (-0.5,0) -- (3.5,0) node[right] {$x$};
 		\draw[->] (0,-0.5) -- (0,2.5) node[above] {$y$};
 		
-		\coordinate (X) at (1,2);
-		\coordinate (Y) at (3,1);
+		\coordinate (A) at (1,2);
+		\coordinate (AX) at (1,0);
+		\coordinate (AY) at (0,2);
+
+		\coordinate (B) at (3,1);
+		\coordinate (BX) at (3,0);
+		\coordinate (BY) at (0,1);
 		
-		% \fill (X) circle (2pt) node[above] {};
-		% \fill (Y) circle (2pt) node[above right] {};
+		\draw[->, thick] (0,0) -- (A) node[pos= 0.6, left] {$\vec{r}_1$};
+		\draw[->, thick] (0,0) -- (B) node[midway, below, yshift=2pt] {$\vec{r}_2$};
+		\draw[->, thick, blue] (A) -- (B) node[midway, above right] { $\Delta \vec{r}$};
+
+		\node[below] (ax) at (AX) {\(x_1\)};
+		\node[left] (ay) at (AY) {\(y_1\)};
+		\node[below] (bx) at (BX) {\(x_2\)};
+		\node[left] (by) at (BY) {\(y_2\)};
 		
-		\draw[->, thick] (0,0) -- (X) node[pos= 0.6, left] {$\vec{r}_1$};
-		\draw[->, thick] (0,0) -- (Y) node[midway, below, yshift=2pt] {$\vec{r}_2$};
-		\draw[->, thick, blue] (X) -- (Y) node[midway, above right] { $\Delta \vec{r}$};
+		\draw[dotted, thin] (AX) -- (A) -- (AY);
+		\draw[dotted, thin] (BX) -- (B) -- (BY);
+
+		\draw[<->, dashed] (ax.south) -- (bx.south) node[midway, fill=white]{\(\Delta x\)};
+		\draw[<->, dashed] (ay.west) -- (by.west) node[midway, fill=white]{\(\Delta y\)};
 
 	\end{tikzpicture}
 \end{image}
+
+
+Zoals aangegeven in de figuur kan ook de verplaatsingsvector \(\Delta\vec{r}\) ontbonden worden. 
+
+\begin{align*}
+\Delta\vec{r}_{21} &= \vec{r}_2 - \vec{r}_1 \\ 
+					&= (x_2\cdot\vec{e}_x + y_2\cdot\vec{e}_y) - (x_1\cdot\vec{e}_x + y_1\cdot\vec{e}_y) \\
+					&= (x_2-x_1)\cdot\vec{e}_x + (y_2-y_1)\cdot\vec{e}_y \\
+					&= \Delta x \cdot\vec{e}_x + \Delta y \cdot\vec{e}_y
+\end{align*}
+
+
 \end{definition}
+
+% fill moet nog verbetern --> papa 
+
+
+
 % TODO: opmerking toevoegen dat de natatie $\Delta$ *erg* slecht is, omdat ze de indices 1 en 2 niet bevat!
 
 
 
-\pgfmathsetmacro{\deltaxba}{\bx - \ax}
-\pgfmathsetmacro{\deltaxec}{\ex - \cx}
+% HIER STAAT NOG EX ZODRA AANPASSEN 
+% \pgfmathsetmacro{\deltaxba}{\bx - \ax}
+% \pgfmathsetmacro{\deltaxec}{\ex - \cx}
 
 Voor ééndimensionale bewegingen is de verplaatsing eenvoudig scalair te berekenen met: $\Delta x$ = $x_{eind}-x_{begin}$.
-De verplaatsing van de zeilboot tussen de tijdstippen $t_0$ en $t_1$ is gelijk aan \( \Delta x = x_1-x_0 = \SI{\bx}{\meter} - \SI{\ax}{\meter} = \SI{\deltaxba}{\meter}\)  en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan \(\Delta x = x_4 - x_2=\SI{\ex}{\meter} - \SI{\cx}{\meter} = \SI{\deltaxec}{\meter}\). 
+De verplaatsing van de zeilboot tussen de tijdstippen $t_0$ en $t_1$ is gelijk aan \( \Delta x = x_1-x_0 = \SI{40}{\meter} - \SI{30}{\meter} = \SI{10}{\meter}\).  
+Tussen $t_2$ en $t_3$ is de verplaatsing gelijk aan \(\Delta x = x_3 - x_2=\SI{-10}{\meter} - \SI{10}{\meter} = \SI{-20}{\meter}\). 
 Deze laatste verplaatsing is negatief, wat aangeeft dat de zeilboot netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
 Op de plaatsfunctie kan de verplaatsing eenvoudig afgelezen worden: 
 
 \begin{image}
-\begin{tikzpicture}
-	\begin{axis}[
-		axis lines=middle,
-		xlabel={tijd \(t\)}, ylabel={positie \(\vec{x}\)},
-		grid=both,
-		width=10cm, height=6cm,
-		xmin=0, xmax=6, ymin=0, ymax=6,
-		xtick=\empty,
-		ytick=\empty,
-		clip=false,
-	]
-		Coordinates
+	\begin{tikzpicture}
+		\begin{axis}[
+			axis lines=middle,
+			xlabel={tijd \(t\)}, ylabel={positie \(\vec{x}\)},
+			grid=both,
+			width=10cm, height=6cm,
+			xmin=0, xmax=6, ymin=0, ymax=6,
+			xtick=\empty,
+			ytick=\empty,
+			clip=false,
+		]
 		\addplot[
 			only marks,
 			mark=*,
 			mark size=2pt,
 			color=red
 		] coordinates {
-			(1,3) (3,2)
+			(3,2) (5,5)
 		};
-
-		% Interpolating function through the points
-
+	
 		\addplot[
 			smooth,
 			thick,
 			color=blue
 		] coordinates {
-			(0,1) (1,3) (3,2) (4,3) (6,4)
+			(0,1) (1,3) (3,2) (5,5) (6,5.5)
 		};
 
-	% Project points (example: first and last points)
-	\draw[dashed] (axis cs:1,3) -- (axis cs:1,0) node[below](tijda) {$t_a$};
-	\draw[dashed] (axis cs:1,3) -- (axis cs:0,3) node[left] (positiea) {$x_a$};
-	\draw[dashed] (axis cs:3,2) -- (axis cs:3,0) node[below] (tijdb) {$t_b$};
-	\draw[dashed] (axis cs:3,2) -- (axis cs:0,2) node[left](positieb) {$x_b$};
+		\draw[dashed] (axis cs:3,2) -- (axis cs:3,0) node[below] (tijda) {$t_a$};
+		\draw[dashed] (axis cs:3,2) -- (axis cs:0,2) node[left] (posa) {$x_a$};
+		\draw[dashed] (axis cs:5,5) -- (axis cs:5,0) node[below] (tijdb) {$t_b$};
+		\draw[dashed] (axis cs:5,5) -- (axis cs:0,5) node[left] (posb){$x_b$};
 
-	\draw[dashed] (positiea) -- (positieb);
-	\draw[<->, dashed] (tijda) -- (tijdb) node[midway, fill=white]{\(\Delta t\)};
-	\end{axis}
-\end{tikzpicture}
+		\draw[<->, dashed] (tijda.south) -- (tijdb.south) node[midway, fill=white]{\(\Delta t\)};
+		\draw[<->, dashed] (posa.west) -- (posb.west) node[midway, fill=white]{\(\Delta x\)};
+
+		\end{axis}
+	\end{tikzpicture}
 \end{image}
+\captionof{figure}{De verplaatsing op de plaatsfunctie}
 
-% DEZE WERKT NIET IN DE HTML MOMENTEEL... 
 \begin{quickquestion*}{}{}
 	Bereken de verplaatsing \(\Delta x = x_4 - x_1\) van de zeilboot en duidt deze verplaatsing aan op de grafiek.  
 \end{quickquestion*}
 
-
 \textbf{Let op}, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
 Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar heb je wel degelijk afstand afgelegd.
-
 
 Wanneer een voorwerp beweegt, doorloopt het meerdere posities. 
 De verbindingslijn van al deze gepasseerde posities, noemt men de \textbf{baan} van de beweging. 
 Een ééndimensionale beweging heeft een rechte baan. 
 Een tweedimensionale is doorgaans krom en kan meerdere vormen hebben (willekeurig, cirkelvormig, paraboolvormig, ellipsvormig,\ldots). 
-% Soms is men geïnteresseerd in een \textbf{baanvergelijking} waarin men de afhankelijkheid tussen x en y wiskundig neerschrijft.
-% Indien de functies \(x(t)\) en \(y(t)\) gekend zijn, kan soms een (expliciete) baanvergelijking bekomen worden door één voorschrift uit te werken naar \(t\) en dit vervolgens te substitueren in de andere vergelijking.
+Soms is men geïnteresseerd in een \textbf{baanvergelijking} waarin men de afhankelijkheid tussen x en y wiskundig neerschrijft.
+Indien de functies \(x(t)\) en \(y(t)\) gekend zijn, kan soms een (expliciete) baanvergelijking bekomen worden door één voorschrift uit te werken naar \(t\) en dit vervolgens te substitueren in de andere vergelijking.
 
 
 \begin{image}[0.5\textwidth]
@@ -444,11 +470,7 @@ Een tweedimensionale is doorgaans krom en kan meerdere vormen hebben (willekeuri
 \end{image}
 \captionof{figure}{Verplaatsing en afgelegde weg}
 
-Samengevat voor ééndimensionale bewegingen:
-
-
-
-
+% Samengevat voor ééndimensionale bewegingen:
 
 % OMGEZET NAAR TABULARS
 % \begin{image}
@@ -459,32 +481,32 @@ Samengevat voor ééndimensionale bewegingen:
 
 
 % SCALAIR EN VECTORIEEL NOG OMDRAAIEN
-\fbox{
-\begin{tabular}{p{5cm} >{\centering\arraybackslash}p{5cm} >{\centering\arraybackslash\arraybackslash}p{5cm}}
-																		& Vectoriële notatie                                            & Scalaire notatie        \\ [4pt]
-	% \cline{2-3}\noalign{\vskip 8pt}
-	Positie op moment \(t\):                                            & \fbox{$\vec{x}_t = x(t)\cdot\vec{e}_x = x\cdot\vec{e}_x $ }   & \fbox{$x(t) = x$}  \newline \tiny{(kan negatief zijn)}             \\ [15pt]
-	Verplaatsing op het \newline tijdsinterval $\Delta t = t_2 - t_1 $: & \fbox{$\Delta\vec{x} = \vec{x}_2 - \vec{x}_1$} \newline \tiny{$\Delta x \cdot \vec{e}_x = (x_2-x_1)\cdot \vec{e}_x = x_2\cdot\vec{e}_x - x_1\cdot\vec{e}_x$ } & \fbox{$\Delta x = x_2 - x_1 $} \newline \tiny{(kan negatief zijn bij een verplaatsing tegen de zin van de \(x\)-as.)}\\ [20pt]
-	Afgelegde weg op moment t:                                          &  $\diagup$                                                    & $s(t)$ \newline \tiny{kan negatief zijn; zie wiskunde}
-\end{tabular}
-}
+% \fbox{
+% \begin{tabular}{p{5cm} >{\centering\arraybackslash}p{5cm} >{\centering\arraybackslash\arraybackslash}p{5cm}}
+% 																		& Vectoriële notatie                                            & Scalaire notatie        \\ [4pt]
+% 	% \cline{2-3}\noalign{\vskip 8pt}
+% 	Positie op moment \(t\):                                            & \fbox{$\vec{x}_t = x(t)\cdot\vec{e}_x = x\cdot\vec{e}_x $ }   & \fbox{$x(t) = x$}  \newline \tiny{(kan negatief zijn)}             \\ [15pt]
+% 	Verplaatsing op het \newline tijdsinterval $\Delta t = t_2 - t_1 $: & \fbox{$\Delta\vec{x} = \vec{x}_2 - \vec{x}_1$} \newline \tiny{$\Delta x \cdot \vec{e}_x = (x_2-x_1)\cdot \vec{e}_x = x_2\cdot\vec{e}_x - x_1\cdot\vec{e}_x$ } & \fbox{$\Delta x = x_2 - x_1 $} \newline \tiny{(kan negatief zijn bij een verplaatsing tegen de zin van de \(x\)-as.)}\\ [20pt]
+% 	Afgelegde weg op moment t:                                          &  $\diagup$                                                    & $s(t)$ \newline \tiny{kan negatief zijn; zie wiskunde}
+% \end{tabular}
+% }
 	
 
 
 
-Voor tweedimensionale bewegingen worden de begrippen positie, verplaatsing en afgelegde weg complexer.
+% Voor tweedimensionale bewegingen worden de begrippen positie, verplaatsing en afgelegde weg complexer.
 
-\begin{image}
-\includegraphics[width=0.8\textwidth]{positie2D}
+% \begin{image}
+% \includegraphics[width=0.8\textwidth]{positie2D}
 
-\end{image}
+% \end{image}
 
 
 
-\begin{image}
-\includegraphics[width=0.8\textwidth]{verplaatsing2D}
+% \begin{image}
+% \includegraphics[width=0.8\textwidth]{verplaatsing2D}
 
-\end{image}
+% \end{image}
 
 
 % \begin{image}
