--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -47,6 +47,13 @@ Als je een krijtje gooit naar het bord, kan je je daarover allerlei vragen stell
 Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica. Enkele vragen zijn eigenlijk onzinnig, en uitzonderlijk kan een vraag worden behandeld in de strafstudie. Als een vraag grappig zou zijn, is dat toevallig en irrelevant.
 
 \end{example}
+
+
+\begin{expandable}{youtube}{Een universiteitscollege over deze leerstof}
+    \youtube{q9IWoQ199_o}
+\end{expandable}
+
+
 % Als je de valbeweging van een appel wilt beschrijven, heb je eerst een \textbf{referentiestelsel} nodig van waaruit je dit zal doen. In dit referentiestelsel een plaatsvector, snelheidsvector, versnellingsvector, ... toekennen en de grootte van deze vectoren beschrijven met vergelijkingen. 
 
 % deze zin is enkel goed als ze het al kennen. 
