--- a/6dejaar/vectoren/vct_begrip.tex
+++ b/6dejaar/vectoren/vct_begrip.tex
@@ -34,6 +34,9 @@ Voorbeeld: een sneeuwbal heeft een temperatuur van -10°C.
 
 De plaats waarop de vector van toepassing is, noemt men het aangrijpingspunt van de vector.
 
+\begin{expandable}{youtube}{Een universiteitscollege over dit hoofdstuk}
+    \youtube{0na1JdPE_JY}
+\end{expandable}
 
 % Opmerking eruit gelaten wegens verwarring bij de leerlingen (vincent)
 % \begin{remark}
