update intro tekst

--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -8,8 +8,11 @@
 	\xmtitle{Inleiding}{}
     \xmsource\xmuitleg
 
-\textbf{Kinematica} (afkomstig van het Griekse woord $\kappa \iota \nu \eta \mu \alpha$ ) is het onderdeel van de fysica dat -zonder zich af te vragen wat de oorzaak ervan is- de \textbf{bewegingen van voorwerpen beschrijft}.
-Vallende appels, rollende knikkers of rijdende auto's, maar ook over de beweging van de maan rond de aarde of de aarde rond de zon worden in de kinematica bestudeerd. 
+\textbf{Kinematica}
+\footnote{Het woord \verb|kinematica| is net zoals \verb|cinema| en \vzerb|kinesist| afgeleid van het Griekse $\kappa \iota \nu \eta \mu \alpha$ dat \verb|beweging| betekent.} 
+is het onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft}, 
+% zonder zich af te vragen wat de bewegingen veroorzaakt.
+zoals vallende appels, rollende knikkers of rijdende auto's, maar ook de beweging van de maan rond de aarde of de aarde rond de zon. 
 
 
 % of moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
